# passwordManager2026

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  add_data.sh  czysta_baza_backup.sql  docker-compose.yml  init.sql  stress_test.sh  tester.sh
client/: CMakeLists.txt
client/src/: main.cpp
client/src/CredentialCard/: CredentialCard.cpp  CredentialCard.h
client/src/LoginWidget/: LoginWidget.cpp  LoginWidget.h
client/src/MainWindow/: MainWindow.cpp  MainWindow.h
client/src/SidePanel/: SidePanel.cpp  SidePanel.h
client/src/VaultWidget/: VaultWidget.cpp  VaultWidget.h
server/: CMakeLists.txt
server/src/: main.cpp
server/src/authhelper/: AuthHelper.cpp  AuthHelper.h
server/src/config/: AppConfig.h  Config.cpp  Config.h
server/src/crypto/: Crypto.cpp  Crypto.h
server/src/database/: DbManager.cpp  DbManager.h
server/src/routes/: AuthRoutes.cpp  AuthRoutes.h  LogRoutes.cpp  LogRoutes.h  VaultRoutes.cpp  VaultRoutes.h
shared/: CMakeLists.txt
shared/credentials/: Credentials.cpp  Credentials.h
shared/logs/: LogEntry.cpp  LogEntry.h
src/: main.cpp
src/authhelper/: AuthHelper.cpp  AuthHelper.h
src/credentials/: Credentials.cpp  Credentials.h
src/crypto/: Crypto.cpp  Crypto.h
src/database/: DbManager.cpp  DbManager.h
src/logs/: LogEntry.cpp
